# fastapi-todo-app

./: .gitignore  README.md  alembic.ini  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 20241220_100542_init_db.py
app/: dependencies.py  main.py  settings.py
app/application/: todo_service.py  user_service.py
app/domain/todo/: enums.py  models.py
app/domain/user/: enums.py  errors.py  models.py
app/infrastructure/: database.py
app/infrastructure/entity/: __init__.py  todo_entity.py  user_entity.py
app/infrastructure/mapper/: todo_mapper.py  user_mapper.py
app/infrastructure/service/: bcrypt_service.py  jwt_service.py
app/interface/system/: sys_api.py  sys_response.py
app/interface/v1/: __init__.py
app/interface/v1/todo/: todo_api.py  todo_request.py
app/interface/v1/user/: user_api.py  user_request.py  user_response.py
app/shared/: errors.py  handlers.py  types.py  utils.py
web/: .prettierrc.js  package.json  pnpm-lock.yaml  react-router.config.ts  vite.config.ts
web/app/: root.tsx  routes.ts
web/app/domain/todo/: enums.ts  models.ts
web/app/domain/user/: enums.ts  models.ts
web/app/features/todo/: todo-api.ts  todo-request.ts
web/app/features/user/: user-api.ts  user-request.ts
web/app/routes/: home.tsx  signin.tsx  signup.tsx
web/app/shared/: api.ts  store.ts  types.ts
